# Team-Pilot

./: .gitmodules  README.md
Project-1/PiRacer-Setup/: README.md
Project-1/RPi-Setup/: README.md
Project-2/: README.md
Project-2/CAN/: README.md
Project-2/CAN/src/: can_recv.cpp  can_recv.py  nano_transmitter.ino  spd_example.ino  (+2 more)
Project-2/CommonAPI-vSomeIP/: README.md
Project-2/Crosscompile/: README.md
Project-2/Qt/: README.md
Project-2/RPM/: README.md  uno_rpm.ino
Project-3/: README.md
Project-3/HeadUnit/: HeadUnit.pro  ambient.cpp  ambient.h  canreciever.h  cantransceiver.cpp  cantransceiver.h  headunit.pro  main.cpp  main.qml
Project-3/HeadUnitExample/: ambient.cpp
Project-3/cluster/: Instrument_Cluster.qml  canstubimpl.cpp  canstubimpl.h  cluster.pro  headunitstubimpl.cpp  headunitstubimpl.h  main.cpp  main.qml  qml.qrc  vsomedata.cpp  vsomedata.h
Project-3/fidl/: HeadUnit.fdepl  HeadUnit.fidl
Project-3/headunit/: PRND.qml  README.md  canreciever.cpp  cantransceiver.cpp  cantransceiver.h  defs.h  headunit.pro.user.638c10c.20  ina219.c  main.cpp  main.qml  qml.qrc
Project-3/headunitexample/: PRND.qml
Project-3/meta-moon/: README
Project-3/pigpio/: ambient.cpp  ambient.h  main.cpp  pigpio.pro
Project-4/: README.md
Project-4/camera/: Camera.qml  camera.pro  main.qml
Project-4/seame/canservice/: CMakeLists.txt
Project-4/seame/canservice/src/: CANService.cpp  CANService.hpp  SEAMEStubImpl.cpp  SEAMEStubImpl.hpp
Project-4/ultrasonic/: ultrasonic.ino
Project3/: readme.md
Project3/PRNDbutton/: chat.h  chatmainwindow.ui
(+165 files in other folders)
